--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <button type="button" onclick="noClicked()" id="btnNo"
                 class="animate__animated animate__zoomIn animate__delay-3s m-3 btn btn-dark btn-lg w3-card">Nope
                 😢</button>
-            <button type="button" onclick="changeAnswerClicked()" id="btnChangeAnswer"
+            <!-- <button type="button" onclick="changeAnswerClicked()" id="btnChangeAnswer"
                 class="animate__animated animate__zoomIn animate__delay-2s btn btn-dark btn-lg w3-card">Change
-                Answer</button>
+                Answer</button> -->
         </div>
 
         <div id="credit" class="animate__animated animate__fadeInUp animate__delay-2s">
